--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
 /HackerRank/
 /Anthill_Food_Finding/testing/
+/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdC/a.exe
+/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdCXX/a.exe
+/cmake-build-debug/build.ninja
+/cmake-build-debug/.cmake/api/v1/query/cache-v2
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-141cbbb1021513d4b7e7.json
+/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+/cmake-build-debug/CMakeFiles/clion-environment.txt
+/cmake-build-debug/CMakeFiles/cmake.check_cache
+/cmake-build-debug/cmake_install.cmake
+/cmake-build-debug/CMakeCache.txt
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdC/CMakeCCompilerId.c
+/cmake-build-debug/CMakeFiles/CMakeConfigureLog.yaml
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeCXXCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeDetermineCompilerABI_C.bin
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeDetermineCompilerABI_CXX.bin
+/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-6cf53951412b35d03783.json
+/CMakeLists.txt
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeRCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.26.4/CMakeSystem.cmake
+/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-3329d904b0579b20b5df.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+/cmake-build-debug/.cmake/api/v1/reply/index-2023-09-24T09-06-48-0751.json
+/cmake-build-debug/Testing/Temporary/LastTest.log
+/.idea/misc.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/cmake-build-debug/CMakeFiles/rules.ninja
+/cmake-build-debug/.cmake/api/v1/reply/target-Quant_Practice-Debug-a6088c82b893e06f0a26.json
+/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-3cb7ac949bd4d029da2a.json
+/.idea/vcs.xml
+/.idea/workspace.xml
